Renaming composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,11 @@
 {
-    "name": "dusterio/link-preview",
+    "name": "duxtinto/link-preview",
     "type": "library",
     "description": "Link preview generation for PHP with Laravel support",
     "keywords": ["php","url","scraping","laravel","preview"],
     "homepage": "http://github.com/dusterio/link-preview",
     "license": "MIT",
-    "authors": [
-        {
-            "name": "Denis Mysenko",
-            "email": "denis@mysenko.com",
-            "homepage": "https://www.mysenko.com"
-        }
-    ],
+    "authors": [],
     "require": {
         "php": ">=5.5.0",
         "illuminate/support": "5.*",
